--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -40,4 +40,23 @@
     }
 }
 
+@media (max-width:1050px) {
+    /* .header{
+        height: 38vw;
+    } */
+    .header-contents{
+        max-width: 45%;
+    }
+}
 
+@media (max-width:750px) {
+    .header-contents{
+        max-width: 65%;
+        p{
+            display: none;
+        }
+        button {
+            padding: 2vw 4vw;
+        }
+    }
+}
