--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,62 +3,132 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-
-    .logo {
-        width: 150px;
+  }
+  .navbar .logo {
+    width: 150px;
+  }
+  .navbar .navbar-menu {
+    display: flex;
+    list-style: none;
+    gap: 20px;
+    color: #49557e;
+    font-size: 18px;
+  }
+  .navbar .navbar-menu .active {
+    padding-bottom: 2px;
+    border-bottom: 2px solid #49557e;
+  }
+  .navbar li {
+    cursor: pointer;
+  }
+  .navbar .navbar-right {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+  }
+  .navbar .navbar-right .navbar-search-icon {
+    position: relative;
+  }
+  .navbar .navbar-right .navbar-search-icon .dot {
+    position: absolute;
+    min-width: 10px;
+    min-height: 10px;
+    background-color: tomato;
+    border-radius: 5px;
+    top: -8px;
+    right: -8px;
+  }
+  .navbar button {
+    background-color: transparent;
+    font-size: 16px;
+    color: #49557e;
+    border: 1px solid tomato;
+    padding: 10px 30px;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  .navbar button:hover {
+    background-color: #fff4f2;
+  }
+  
+  @media(max-width: 1050px) {
+    .navbar .logo {
+      width: 140px;
     }
-
-    .navbar-menu{
-        display: flex;
-        list-style: none;
-        gap: 20px;
-        color: #49557e;
-        font-size: 18px;
-
-        .active{
-            padding-bottom: 2px;
-            border-bottom: 2px solid #49557e;
-        }
+    .navbar .navbar-menu {
+      gap: 20px;
+      font-size: 17px;
     }
-
-    li{
-        cursor: pointer;
+    .navbar .navbar-right {
+      gap: 30px;
     }
-
-    .navbar-right{
-        display: flex;
-        align-items: center;
-        gap: 40px;
-
-        .navbar-search-icon{
-            position: relative;
-
-            .dot{
-                position: absolute;
-                min-width: 10px;
-                min-height: 10px;
-                background-color: tomato;
-                border-radius: 5px;
-                top: -8px;
-                right: -8px;
-            }
-        }
+    .navbar .navbar-right img {
+      width: 22px;
     }
-
-    button{
-        background-color: transparent;
-        font-size: 16px;
-        color: #49557e;
-        border: 1px solid tomato;
-        padding: 10px 30px;
-        border-radius: 50px;
-        cursor: pointer;
-        transition: 0.3s;
+    .navbar .navbar-right button {
+      padding: 8px 25px;
     }
-
-    button:hover{
-        background-color: #fff4f2;
+  }
+  
+  @media(max-width: 900px) {
+    .navbar .logo {
+      width: 120px;
     }
-
-}
-
+    .navbar .navbar-menu {
+      gap: 15px;
+      font-size: 16px;
+    }
+    .navbar .navbar-right {
+      gap: 20px;
+    }
+    .navbar .navbar-right img {
+      width: 20px;
+    }
+    .navbar .navbar-right button {
+      padding: 7px 20px;
+      font-size: 15px;
+    }
+  }
+  
+  @media(max-width: 750px) {
+    .navbar .navbar-menu {
+      display: none;
+    }
+  }
+  
+  @media(max-width: 1050px) {
+    .navbar .logo {
+      width: 140px;
+    }
+    .navbar .navbar-menu {
+      gap: 20px;
+      font-size: 17px;
+    }
+    .navbar .navbar-right {
+      gap: 30px;
+    }
+  }
+  
+  @media(max-width: 900px) {
+    .navbar .logo {
+      width: 120px;
+    }
+    .navbar .navbar-menu {
+      gap: 15px;
+      font-size: 16px;
+    }
+    .navbar .navbar-right {
+      gap: 20px;
+    }
+  }
+  
+  @media(max-width: 750px) {
+    .navbar .logo {
+      width: 100px;
+    }
+    .navbar .navbar-menu {
+      display: none;
+    }
+  }
+  
